--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  http: ^1.2.2
+  flutter_riverpod: ^2.6.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +63,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/unnamed.png
+    - assets/images/splash.png
+    - assets/images/vegetableImages/img1.png
+    - assets/images/vegetableImages/img2.png
+    - assets/images/vegetableImages/img3.png
+    - assets/images/vegetableImages/img4.jpg
+    - assets/images/vegetableImages/img5.jpg
+    - assets/images/vegetableImages/img6.jpg
+    - assets/images/vegetableImages/img7.jpg
+    - assets/images/vegetableImages/img8.jpg
+    - assets/images/vegetableImages/img9.jpg
+    - assets/images/vegetableImages/img10.jpg
+    - assets/images/man.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
